# yolo_object_detection

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  package.xml
include/yolo_object_detection/: yolo_const.hpp  yolo_object_detection.hpp
launch/: yolo_object_detection_launch.py  yolo_object_detection_rviz_launch.py
params/: yolo_object_detection.yaml
rviz/: yolo_object_detection.rviz
src/: cv.cpp  yolo_object_detection.cpp  yolo_object_detection_node.cpp
